k8s/base/deployment.yaml
# deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-k8s-app
  labels:
    app: spring-k8s-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-k8s-app
  template:
    metadata:
      labels:
        app: spring-k8s-app
    spec:
      serviceAccountName: spring-k8s-account  # Added this line for RBAC
      containers:
      - name: spring-k8s-app
        image: spring-k8s-app:latest
        imagePullPolicy: Never  # Ensures using local image
        ports:
        - containerPort: 8081
        envFrom:  # Added to use ConfigMap
        - configMapRef:
            name: spring-k8s-config
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8081
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "200m"
